--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,8 +1,9 @@
 .about-container {
-  padding: 4rem 2rem;
+  padding: 0 45px;
+  //padding: 4rem 2rem;
   max-width: 1200px;
   margin: 0 auto;
-  border: 2px solid red;
+  //border: 2px solid red;
 
   .about-title {
     font-size: 2.5rem;
@@ -10,6 +11,7 @@
     text-align: center;
     margin-bottom: 4rem;
     position: relative;
+    //border: 2px solid red;
 
     &::after {
       content: '';
@@ -81,7 +83,7 @@
 
         h3 {
           color: #fff;
-          font-size: 1.2rem;
+          font-size: 0.6rem;
           margin-bottom: 1rem;
           transition: inherit;
         }
@@ -153,6 +155,10 @@
         .content, .image-container {
           width: 100%;
           margin: 0 0 30px 0 !important;
+
+          h3 {
+            font-size: 1.2rem;
+          }
         }
 
         .image-placeholder {
