--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -3,8 +3,7 @@
   overflow: hidden;
   position: relative;
   background: linear-gradient(#0c0c1d, #111132);
-  //background-color: #0c0c1d;
-  //padding: 0 45px;
+  padding: 0 45px;
   padding-top: 120px;
   //border: 2px solid red;
 
